--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "run-p lint:js lint:prettier lint:style",
     "lint:js": "eslint --ext .ts,.tsx,.js --ignore-path .gitignore .",
     "lint:prettier": "prettier --check \"./**/*.{ts,tsx,js}\" --ignore-path .gitignore",
-    "lint:style": "stylelint \"src/**/*.css\"",
+    "lint:style": "stylelint \"src/**/*.css\" --ignore-path .gitignore",
     "lint:fix": "npm run lint:js -- --fix && prettier --write \"./**/*.{ts,tsx,js}\" --ignore-path .gitignore && npm run lint:style -- --fix",
     "start": "next start",
     "typecheck": "hcm src/**/*.module.css && tsc --noEmit"
@@ -33,6 +33,7 @@
     "prettier-plugin-organize-imports": "^3.2.2",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^3.1.0",
     "stylelint-config-standard": "*25.0.0",
     "typescript": "^5.0.4"
   }
